[project]
name = "wraptext"
version = "1.0.0"
description = "Improved text wrapping and filling."
authors = [{ name = "Jonas da Silva", email = "phoenixr41414141@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["wcwidth (>=0.2.13,<0.3.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
mypy = "^1.15.0"

[tool.mypy]
strict = true
