[project]
name = "wraptext"
version = "1.0.1"
description = "Improved text wrapping and filling."
authors = [{ name = "Jonas da Silva", email = "phoenixr41414141@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["ansi", "text", "textwrap", "unicode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing",
  "Topic :: Utilities",
  "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = ["wcwidth (>=0.2.13,<0.3.0)"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
mypy = "^1.15.0"

[project.urls]
repository = "https://github.com/phoenixr-codes/wraptext"
"Bug Tracker" = "https://github.com/phoenix-codes/wraptext/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
